# PHOBIC-GPU

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  benchmark.cpp  example.cpp
.github/workflows/: build.yml
dev/: main.cpp
include/: app.h  apply_partition_offset.h  bucket_sizes_stage.h  bucket_sort_stage.h  bucketers.h  check.h  command_buffer.h  descriptors.h  gpuptmphf.hpp  host_timer.h  ioutil.h  memory.h  mphf.hpp  mphf_build_invocation.h  mphf_builder.h  mphf_config.h  pipeline.h  prefix_sum_stage.h  queue_family.h  redistribute_keys_stage.h  renderdoc.h  search_stage.h  shader.h  shader_constants.h  uniform_buffer.h  utils.h  vulkan_api.h
include/app/: app.h  check.h  command_buffer.h  descriptors.h  host_timer.h  ioutil.h  memory.h  pipeline.h  queue_family.h  renderdoc.h  shader.h  uniform_buffer.h  utils.h
include/encoders/: darray.hpp  ef_sequence.hpp  encoders.hpp  golomb_sequence.hpp  mono_encoders.hpp  ortho_encoder.hpp  ortho_encoder_dual.hpp
include/encoders/base/: bit_vector.hpp  compact_vector.hpp  darray.hpp  ef_sequence.hpp  encoders.hpp  golomb_sequence.hpp  linear_diff_encoder.hpp  rice_sequence.hpp  sdc_sequence.hpp  util.hpp
include/encoders/partitionOffsetEnocders/: diff_partition_offset_encoder.hpp  direct_partition_offset_encoder.hpp
include/encoders/pilotEncoders/: interleaved_encoder.hpp  interleaved_encoder_dual.hpp  mono_encoders.hpp  multi_encoder.hpp  multi_encoder_dual.hpp  ortho_encoder.hpp  ortho_encoder_dual.hpp
include/gpupthash/: apply_partition_offset.h  bucket_sizes_stage.h  bucket_sort_stage.h  bucketers.h  hasher.hpp  mphf.hpp  mphf_build_invocation.h  mphf_builder.h  mphf_config.h  prefix_sum_stage.h  redistribute_keys_stage.h  search_stage.h  shader_constants.h
include/phobicGpu/: apply_partition_offset.h  bucket_sizes_stage.h  bucket_sort_stage.h  bucketers.h  hasher.hpp  mphf.hpp  mphf_builder.h  mphf_config.h  prefix_sum_stage.h  redistribute_keys_stage.h  search_stage.h
shaders/: apply_partition_offset.comp  bucket_sizes.comp  constants.glsl  default_header.glsl  hashing.glsl  key_mapping.glsl  prefix_sum.comp  prefix_sum_offset.comp  redistribute_keys.comp  search.comp  search_stratB0.glsl  search_strat_initial.glsl  search_strat_local.glsl  sort_sum.comp  util.glsl
src/: app.cpp  apply_partition_offset.cpp  bucket_sizes_stage.cpp  bucket_sort_stage.cpp  command_buffer.cpp  descriptors.cpp  host_timer.cpp  memory.cpp  mphf_builder.cpp  pipeline.cpp  prefix_sum_stage.cpp  redisistribute_keys_stage.cpp  renderdoc.cpp  search_stage.cpp  shader.cpp  utils.cpp
src/app/: app.cpp  command_buffer.cpp  descriptors.cpp  host_timer.cpp  memory.cpp  pipeline.cpp  renderdoc.cpp  shader.cpp  utils.cpp
